AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = cuckoo_engine.la

cuckoo_engine_la_CFLAGS= ${NO_ERROR}
cuckoo_engine_la_LDFLAGS= -module -dynamic
cuckoo_engine_la_SOURCES= src/assoc.c \
                          src/assoc.h \
                          src/cuckoo_engine.c \
                          src/cuckoo_engine.h \
                          src/items.c \
                          src/items.h \
                          src/slabs.c \
                          src/slabs.h
